[SKY-20]: Add API POST endpoint for pilots
