# skyroster-backend/src/main/java/pl/skyroster/skyroster_backend/infrastructure/adapter/in/web/PilotController.java
@@ -4,12 +4,14 @@ import lombok.RequiredArgsConstructor;
 import org.jspecify.annotations.Nullable;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
+import pl.skyroster.skyroster_backend.application.pilot.AddPilotUseCase;
 import pl.skyroster.skyroster_backend.application.pilot.DeletePilotUseCase;
 import pl.skyroster.skyroster_backend.application.pilot.GetPilotUseCase;
 import pl.skyroster.skyroster_backend.application.pilot.PatchPilotUseCase;
 import pl.skyroster.skyroster_backend.generated.api.ApiApi;
 import pl.skyroster.skyroster_backend.generated.model.PagedPilotResponse;
 import pl.skyroster.skyroster_backend.generated.model.PilotPatchRequest;
+import pl.skyroster.skyroster_backend.generated.model.PilotRequest;
 import pl.skyroster.skyroster_backend.generated.model.PilotResponse;
 
 import java.util.UUID;
@@ -21,6 +23,7 @@ public class PilotController {
   private final GetPilotUseCase getPilotUseCase;
   private final DeletePilotUseCase deletePilotUseCase;
   private final PatchPilotUseCase patchPilotUseCase;
+  private final AddPilotUseCase addPilotUseCase;
 
   @GetMapping(ApiApi.PATH_GET_PILOTS)
   public ResponseEntity<PagedPilotResponse> getPilots(@RequestParam Integer page, @RequestParam Integer size, @RequestParam @Nullable String sort) {
@@ -36,5 +39,10 @@ public class PilotController {
   @PatchMapping(ApiApi.PATH_PATCH_PILOT)
   public ResponseEntity<PilotResponse> patchPilot(@PathVariable UUID pilotId, @RequestBody PilotPatchRequest request) {
     return ResponseEntity.ok(patchPilotUseCase.patchPilot(pilotId, request));
+  }
+
+  @PostMapping(ApiApi.PATH_CREATE_PILOT)
+  public ResponseEntity<PilotResponse> addPilot(@RequestBody PilotRequest pilot){
+    return ResponseEntity.ok(addPilotUseCase.addPilot(pilot));
   }
 }
