# skyroster-backend/src/main/java/pl/skyroster/skyroster_backend/infrastructure/mappers/OperationalBaseInfoMapper.java
@@ -11,4 +11,12 @@ public class OperationalBaseInfoMapper {
                 operationalBase.getName()
         );
     }
+
+    public static OperationalBase fromInfo(OperationalBaseInfo operationalBase) {
+        return new OperationalBase(
+            operationalBase.getId(),
+            operationalBase.getIcaoCode(),
+            operationalBase.getName()
+        );
+    }
 }
