# skyroster-backend/src/main/java/pl/skyroster/skyroster_backend/infrastructure/mappers/PilotMapper.java
@@ -5,8 +5,11 @@ import pl.skyroster.skyroster_backend.domain.model.AircraftType;
 import pl.skyroster.skyroster_backend.domain.model.Pilot;
 import pl.skyroster.skyroster_backend.domain.model.Qualification;
 import pl.skyroster.skyroster_backend.generated.model.PilotResponse;
+import pl.skyroster.skyroster_backend.generated.model.PilotRequest;
 
 import java.util.Comparator;
+import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Component
 public class PilotMapper {
@@ -29,5 +32,15 @@ public class PilotMapper {
                 .sorted(Comparator.comparing(AircraftType::getName))
                 .map(AircraftTypeInfoMapper::toAircraftTypeInfo)
                 .toList());
+  }
+  public static Pilot toEntity(PilotRequest request){
+    return new Pilot(
+        UUID.randomUUID(),
+        request.getFirstName(),
+        request.getLastName(),
+        request.getLicence(),
+        OperationalBaseInfoMapper.fromInfo(request.getHomeBase()),
+        request.getQualifications().stream().map(PilotQualificationMapper::fromPilotQualificationInfo).collect(Collectors.toSet()),
+        request.getAircraftTypes().stream().map(AircraftTypeInfoMapper::toAircraftTypeInfo).collect(Collectors.toSet()));
   }
 }
